# chip-walo

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  chip-walo.c  peripherals.c  system.c  xmake.lua
header/: peripherals.h  system.h
headers/: peripherals.h  system.h
sources/: chip_walo.c  chip_walo.h  main.c  opcodes.c  opcodes.h  peripherals.c  peripherals.h
src/: audio.c  audio.h  chip-walo.c  common.h  graphics.c  graphics.h  keypad.c  keypad.h  main.c  peripherals.c  peripherals.h  system.c  system.h
